Closed
Bug 339031
Opened 19 years ago
Closed 19 years ago
DND of bookmarks in Places window crashes Minefield in ZETA [@ BRegion::~BRegion]
Categories
(Core Graveyard :: Widget: BeOS, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: koki, Assigned: thesuckiestemail)
References
Details
(Keywords: crash, fixed1.8.1)
Crash Data
Attachments
(3 files, 2 obsolete files)
|
5.17 KB,
text/plain
|
Details | |
|
1.38 KB,
patch
|
sergei_d
:
review+
|
Details | Diff | Splinter Review |
|
1.62 KB,
patch
|
sergei_d
:
review+
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.9a1) Gecko/20060522 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.9a1) Gecko/20060522 Minefield/3.0a1
Any attempt to use drag-and-drop in the Places window crashes Minefield.
Reproducible: Always
Steps to Reproduce:
1. Add a bookmark.
2. Select Bookmarks > Organize Bookmarks... to open the Places window.
3. Click and drag the newly created bookmark.
Actual Results:
FF crashes.
Expected Results:
User should be able to move bookmarks by using drag-and-drop.
SC attachment follows.
| Reporter | ||
Comment 1•19 years ago
|
||
Comment 2•19 years ago
|
||
Similar problem happens with Drag'n'drop of messages in email or newsgroup window of Thunderbird under BeOS.
Updated•19 years ago
|
Component: Bookmarks → Places
QA Contact: bookmarks → places
Might not be the same cause but it is related.
What I am seeing is that if I try and delete the default subscription (BBC) Minefield crashes.
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060525 Minefield/3.0a1 ID:0000000000
Updated•19 years ago
|
Severity: normal → critical
Keywords: crash
Summary: DND of bookmarks in Places window crashes Minefield in ZETA → DND of bookmarks in Places window crashes Minefield in ZETA [@ BRegion::~BRegion]
Version: unspecified → Trunk
Comment 4•19 years ago
|
||
Confirming behavior. Same problem with DND of mail entries in BeOS Thunderbird builds.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•19 years ago
|
Component: Places → Widget: BeOS
Product: Firefox → Core
Updated•19 years ago
|
QA Contact: places → beos
This patch fixes the crash. Could someone tell me if DND in places are a bit off for us, or if it's supposed to behave the way it does with this fix?
Assignee: nobody → thesuckiestemail
Attachment #225042 -
Attachment is obsolete: true
Status: NEW → ASSIGNED
Comment on attachment 225043 [details] [diff] [review]
fixed formatting
r?
I suggest we fix other DND-troubles in new bugs.
Attachment #225043 -
Flags: review?(sergei_d)
Comment 8•19 years ago
|
||
Comment on attachment 225043 [details] [diff] [review]
fixed formatting
r=sergei_d
Attachment #225043 -
Flags: review?(sergei_d) → review+
Comment 9•19 years ago
|
||
Checking in mozilla/widget/src/beos/nsDragService.cpp;
/cvsroot/mozilla/widget/src/beos/nsDragService.cpp,v <-- nsDragService.cpp
new revision: 1.16; previous revision: 1.15
done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 10•19 years ago
|
||
This fix needs to be back-ported to the 1.8.1 branch.
Attachment #241962 -
Flags: review?(sergei_d)
Updated•19 years ago
|
Attachment #241962 -
Flags: review?(sergei_d) → review?(thesuckiestemail)
Comment 11•19 years ago
|
||
(In reply to comment #10)
> Created an attachment (id=241962) [edit]
> BeOS-only patch for 1.8.1 branch
>
> This fix needs to be back-ported to the 1.8.1 branch.
>
Note: there is no change to the patch code, only to formatting. for some reason, the old patch would not apply cleanly to branch, so I applied manually and created then new diff posted above.
Comment 12•19 years ago
|
||
Comment on attachment 241962 [details] [diff] [review]
BeOS-only patch for 1.8.1 branch
Code is buggy, I fixed it later in separate bug, I think it is better to create here proper code instantly.
See
dragRect.Set( aX, aY, aWidth, aHeight) is wrong,
must be
dragRect.Set( aX, aY, aX + aWidth, aY + aHeight)
For exact reference look into current trunk code
Attachment #241962 -
Flags: review?(thesuckiestemail) → review-
Comment 13•19 years ago
|
||
This section of code taken verbatim from trunk version of beos/nsDragService.cpp. Fixes this bug on branch; includes fixes not in earlier (denied) patch.
Attachment #241962 -
Attachment is obsolete: true
Attachment #241973 -
Flags: review?(sergei_d)
Comment 14•19 years ago
|
||
Comment on attachment 241973 [details] [diff] [review]
BeOS-only cumulative patch for 1.8.1 branch
Askin branch approval - quite critical. fixes crash at DnD.
Pure BeOS patch in pure BeOS folder
Attachment #241973 -
Flags: review?(sergei_d)
Attachment #241973 -
Flags: review+
Attachment #241973 -
Flags: approval1.8.1?
Comment 15•19 years ago
|
||
Comment on attachment 241973 [details] [diff] [review]
BeOS-only cumulative patch for 1.8.1 branch
a=beltzner on behalf of drivers for 1.8.1 branch (NPOTB)
Attachment #241973 -
Flags: approval1.8.1? → approval1.8.1+
Comment 16•19 years ago
|
||
Checking in mozilla/widget/src/beos/nsDragService.cpp;
/cvsroot/mozilla/widget/src/beos/nsDragService.cpp,v <-- nsDragService.cpp
new revision: 1.13.28.3; previous revision: 1.13.28.2
done
Keywords: fixed1.8.1
Updated•14 years ago
|
Crash Signature: [@ BRegion::~BRegion]
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•