[BeOS]Bug 339031 DND of bookmarks in Places window crashes Minefield in ZETA [@ BRegion::~BRegion], p=thesuckiestemail, r=sergei_d.